.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:43:30 **** Incremental Build of configuration Debug for project FlexibleData ****
make -j3 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H563xx -c -I../Core/Inc -I../Drivers/STM32H5xx_HAL_Driver/Inc -I../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H5xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Inc/stm32h5xx_hal_conf.h:289,
                 from ../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c: In function 'HAL_UARTEx_RxEventCallback':
../Core/Src/main.c:113:39: error: 'hdma_usart3_rx' undeclared (first use in this function)
  113 |                 __HAL_DMA_DISABLE_IT(&hdma_usart3_rx, DMA_IT_HT);
      |                                       ^~~~~~~~~~~~~~
../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal_dma.h:912:5: note: in definition of macro '__HAL_DMA_DISABLE_IT'
  912 |   ((__HANDLE__)->Instance->CCR &= ~(__INTERRUPT__))
      |     ^~~~~~~~~~
../Core/Src/main.c:113:39: note: each undeclared identifier is reported only once for each function it appears in
  113 |                 __HAL_DMA_DISABLE_IT(&hdma_usart3_rx, DMA_IT_HT);
      |                                       ^~~~~~~~~~~~~~
../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal_dma.h:912:5: note: in definition of macro '__HAL_DMA_DISABLE_IT'
  912 |   ((__HANDLE__)->Instance->CCR &= ~(__INTERRUPT__))
      |     ^~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:159:25: error: 'hdma_usart3_rx' undeclared (first use in this function)
  159 |   __HAL_DMA_DISABLE_IT(&hdma_usart3_rx, DMA_IT_HT);
      |                         ^~~~~~~~~~~~~~
../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal_dma.h:912:5: note: in definition of macro '__HAL_DMA_DISABLE_IT'
  912 |   ((__HANDLE__)->Instance->CCR &= ~(__INTERRUPT__))
      |     ^~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j3 all" terminated with exit code 2. Build might be incomplete.
15:51:34 **** Incremental Build of configuration Debug for project FlexibleData ****
make -j3 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H563xx -c -I../Core/Inc -I../Drivers/STM32H5xx_HAL_Driver/Inc -I../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H5xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Inc/stm32h5xx_hal_conf.h:289,
                 from ../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c: In function 'HAL_UARTEx_RxEventCallback':
../Core/Src/main.c:113:39: error: 'hdma_usart_rx' undeclared (first use in this function)
  113 |                 __HAL_DMA_DISABLE_IT(&hdma_usart_rx, DMA_IT_HT);
      |                                       ^~~~~~~~~~~~~
../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal_dma.h:912:5: note: in definition of macro '__HAL_DMA_DISABLE_IT'
  912 |   ((__HANDLE__)->Instance->CCR &= ~(__INTERRUPT__))
      |     ^~~~~~~~~~
../Core/Src/main.c:113:39: note: each undeclared identifier is reported only once for each function it appears in
  113 |                 __HAL_DMA_DISABLE_IT(&hdma_usart_rx, DMA_IT_HT);
      |                                       ^~~~~~~~~~~~~
../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal_dma.h:912:5: note: in definition of macro '__HAL_DMA_DISABLE_IT'
  912 |   ((__HANDLE__)->Instance->CCR &= ~(__INTERRUPT__))
      |     ^~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:159:25: error: 'hdma_usart_rx' undeclared (first use in this function)
  159 |   __HAL_DMA_DISABLE_IT(&hdma_usart_rx, DMA_IT_HT);
      |                         ^~~~~~~~~~~~~
../Drivers/STM32H5xx_HAL_Driver/Inc/stm32h5xx_hal_dma.h:912:5: note: in definition of macro '__HAL_DMA_DISABLE_IT'
  912 |   ((__HANDLE__)->Instance->CCR &= ~(__INTERRUPT__))
      |     ^~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j3 all" terminated with exit code 2. Build might be incomplete.
15:53:11 **** Incremental Build of configuration Debug for project FlexibleData ****
make -j3 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H563xx -c -I../Core/Inc -I../Drivers/STM32H5xx_HAL_Driver/Inc -I../Drivers/STM32H5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H5xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "FlexibleData.elf" @"objects.list"   -mcpu=cortex-m33 -T"/Users/jinhui/Projects/STM32CubeIDE/STM32/FlexibleData/STM32H563ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="FlexibleData.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: FlexibleData.elf
 
arm-none-eabi-size   FlexibleData.elf 
arm-none-eabi-objdump -h -S  FlexibleData.elf  > "FlexibleData.list"
   text	   data	    bss	    dec	    hex	filename
  39864	     20	   2012	  41896	   a3a8	FlexibleData.elf
Finished building: default.size.stdout
 
Finished building: FlexibleData.list
 
15:53:45 **** Incremental Build of configuration Debug for project FlexibleData ****
make -j3 all 
arm-none-eabi-size   FlexibleData.elf 
   text	   data	    bss	    dec	    hex	filename
  39864	     20	   2012	  41896	   a3a8	FlexibleData.elf
Finished building: default.size.stdout
 
15:54:02 **** Incremental Build of configuration Debug for project FlexibleData ****
make -j3 all 
arm-none-eabi-size   FlexibleData.elf 
   text	   data	    bss	    dec	    hex	filename
  39864	     20	   2012	  41896	   a3a8	FlexibleData.elf
Finished building: default.size.stdout
 
